--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,9 @@ end
 target 'MyPaymentPackage' do
   config = use_native_modules!
 
+  # Add the Paymob SDK here
+  pod 'Paymob'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
